# sshgo

./: README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tmp.txt
src/: App.jsx  App.tsx
src-tauri/: Cargo.toml  host-sign-key.pub  tauri.conf.json  user-sign-key.pub
src-tauri/src/: certificate.rs  commands.rs  error.txt  file.rs  main.rs  ssh.rs
src/components/: Auth_Modes.tsx
src/components/elements/: Tab.jsx
src/components/ui/: dialog.tsx  toggle_button.tsx
src/pages/: 1.tsx  3.tsx  Certificate_Authentication.tsx  Connect_SSH.tsx  ManageKeys.tsx  PKA.jsx  PasswordAuth.jsx  g.tsx  manage_keys.tsx  ok.tsx  okayish.tsx  t.tsx  w.tsx
ssh-go/: package-lock.json  package.json
ssh-go/src/: App.jsx
ssh-go/src-tauri/: Cargo.toml  tauri.conf.json
ssh-go/src/components/elements/: Tab.jsx
ssh_installation/: Cargo.toml  check_os  check_os.rs
